# bazaar

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
bazaar_cli/: bazaarwrapper.py  common.py  main.py  mw_dl.py  mw_info.py  mw_list.py
