[tool.poetry]
name = "bazaar-cli"
version = "0.1.0"
description = "Command line tool to list and download Malware Bazaar samples"
authors = ["matteyeux"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/matteyeux/bazaar-cli"
repository = "https://github.com/matteyeux/bazaar-cli"
keywords = ['malwarebazaar']
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: System Administrators',
    'Topic :: Utilities',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.10',
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.28.2"
click-default-group = "^1.2.2"
pyzipper = "^0.3.6"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bazaar-cli = "bazaar_cli.main:main"
bazaar = "bazaar_cli.main:main"
bz = "bazaar_cli.main:main"
