[project]
name = "bazaar-cli"
version = "0.1.0"
description = "Command line tool to list and download Malware Bazaar samples"
authors = [{ name = "matteyeux" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
keywords = ["malwarebazaar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: System Administrators",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "click>=8.1.3,<9",
    "requests>=2.28.2,<3",
    "click-default-group>=1.2.2,<2",
    "pyzipper>=0.3.6,<0.4",
    "tabulate>=0.9.0,<0.10",
]

[project.urls]
Homepage = "https://github.com/matteyeux/bazaar-cli"
Repository = "https://github.com/matteyeux/bazaar-cli"

[project.scripts]
bazaar-cli = "bazaar_cli.main:main"
bazaar = "bazaar_cli.main:main"
bz = "bazaar_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.13.2",
    "types-requests>=2.32.4.20250913",
]
